--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.3" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     </ItemGroup>
 
