Full example now complete

--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ClassicApplication\ClassicApplication.csproj" />
+      <ProjectReference Include="..\ResultBasedApplication\ResultBasedApplication.csproj" />
     </ItemGroup>
 
     <ItemGroup>
